--- a/assets/scss/ui/_animate.scss
+++ b/assets/scss/ui/_animate.scss
@@ -31,7 +31,6 @@
     max-height: 90%;
     background-color: white;
     padding: 2rem;
-    border-radius: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +41,6 @@
     box-shadow: 0 0 0.5rem 0 rgba(var(--color-dark), 0.25);
     max-width: 100%;
     max-height: 80vh;
-    border-radius: 1rem;
     overflow: hidden;
     object-fit: contain;
 }
