--- a/assets/scss/ui/_components.scss
+++ b/assets/scss/ui/_components.scss
@@ -8,10 +8,11 @@
     display: flex;
     align-items: center;
     padding: 0 1rem;
-    margin: 0 calc(#{$grid-thickness}/2) 2rem calc(#{$grid-thickness}/2);
+    margin: 0 calc(#{$grid-thickness}/4) 2rem calc(#{$grid-thickness}/4);
     border-left: 0.25rem solid var(--color-link);
 }
 
 .card {
     @include panel-card(var(--color-card-bg), var(--color-card-drop-shadow));
 }
+
