--- a/assets/scss/ui/_containers.scss
+++ b/assets/scss/ui/_containers.scss
@@ -33,9 +33,9 @@
     }
 }
 
-// Home projects image stacking
-.home-projects-images {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
+// // Home projects image stacking
+// .home-projects-images {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 0.5rem;
+// }
